# ShopSimulatorV3

./: .gitignore  pyproject.toml  shop.py  spawner.py
docs/: tasks.md
src/: spawner.py
src/models/: Item.py  User.py
src/views/: ConsoleView.py
tests/: test_spawner.py
