[project]
name = "shopsimulator"
version = "0.1.0"
description = "A 3D shop simulator game built with Panda3D, allowing players to manage a virtual shop with customers, inventory, and transactions in an immersive 3D environment."
requires-python = ">=3.8"
dependencies = [
    "panda3d==1.10.15",
    "panda3d-simplepbr", # For physically-based rendering
    "numpy", # For mathematical operations
    "pillow", # For image processing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
