[project]
name = "shopsimulator"
version = "0.1.0"
description = "A text-based shop simulator game built with urwid, allowing players to manage a virtual shop with customers, inventory, and transactions in an interactive terminal interface."
requires-python = ">=3.8"
dependencies = [
    "urwid>=2.1.0", # For text-based user interface
    "numpy", # For mathematical operations
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
